# OsmosisDB

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-CC0  LICENSE-MIT  README.md  SECURITY.md  config.example.toml  pyproject.toml  requirements.md
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
osmosisdb/: __init__.py  cli.py  config.py
osmosisdb/agents/: benchmark.py  detector.py  executor.py  learner.py  observer.py  planner.py
osmosisdb/analysis/: __init__.py  fingerprint.py  parser.py
osmosisdb/api/: __init__.py  app.py
osmosisdb/api/routes/: config.py  copilot.py  drift.py  indexes.py  optimisations.py  patterns.py  queries.py  stream.py
osmosisdb/intelligence/: clusterer.py  drift.py  embedder.py  patterns.py
osmosisdb/optimizer/: catalog.py  executor.py  recommender.py  rollback.py
osmosisdb/proxy/: __init__.py  protocol.py  recorder.py  server.py
osmosisdb/reports/: generator.py
osmosisdb/storage/: __init__.py  models.py  sqlite.py
